[package]
name = "mx"
version = "0.1.0"
authors = ["Andrew Vy <andrew@andrewvy.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2.3.1"
structopt = "0.3.14"
mime_guess = "2.0.3"
bytesize = "1.0.1"
colored = "1.9.3"
serde = { version = "1.0.111", features = ["derive"] }
serde_json = "1.0.53"
reqwest = { version = "0.10.6", features = ["blocking", "json"] }
rayon = "1.3.0"
